<resources>
    <string name="app_name">ShaadiBandhanApp</string>
    <string name="str_no_users_found">No Users Found</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="location">Location:</string>
    <string name="nationality">Nationality:</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="shadi_bandhan">Shaadi Bandhan</string>
    <string name="find_a_match">Find a match</string>
</resources>